--- a/css/style.css
+++ b/css/style.css
@@ -177,11 +177,8 @@ a{
   border-bottom: 1px solid #ebebeb;
 }
 
-}
 
-.bottom-header-inner-left li:hover{
-  background-color: #ffffff;
-}
+
 
 .bottom-header-inner-left li a{
   color: #6a6a6a;
@@ -192,39 +189,57 @@ a{
   display: none;
 }
 
-.notification{
-  height:  20px;
-  width: 20px;
-}
-
-.notification img{
-  height: 20px;
-  width: 20px;
-}
 
 .menu-invites{
-  width: 140px;
   float: right;
-  background-image: url('../images/inviteActive.png');
 }
   
-.menu-request{
-  margin-left: 30px;
-  width: 130px;
+.menutext-request{
+  margin-left: 35px;
   float: right;
   color: #969696;
-  background-image: url('../images/requestInActive.png');
 }
 
-.menu-request:hover{
+.menutext-request:hover{
+  color: #2fc1da;
+
+}
+
+.menutext-request:before{
+  content: '';
+  background-image: url('/images/requestInActive.png');
+  position: absolute;
+  height: 16px;
+  width: 20px;
+  margin-left: -21px;
+
+}
+
+.menutext-request:hover:before{
   background-image: url('../images/requestActive.png');
-  color: #292929;
 }
 
 .menutext{
   float: right;
   font-size: 11.2px;
   font-weight: 100;
+}
+
+.menutext-box:hover{
+  color: #2fc1da;
+}
+
+.menutext-box:before{
+  content: '';
+  background-image: url('/images/inviteInActive.png');
+  position: absolute;
+  height: 16px;
+  width: 10px;
+  margin-left: -15px;
+}
+
+.menutext-box:hover:before{
+  background-image: url('/images/inviteActive.png');
 }
 
 .menuvalue{
@@ -453,7 +468,7 @@ a{
 }
 
 .contact-info{
-  float: left;
+  text-align: center;
 }
 
 .contact-info li{
@@ -471,10 +486,12 @@ a{
 }
 
 .copyright{
-  float: right;
+  text-align: center;
 }
 
-@media  (min-width: 576px) {
+
+
+@media screen and (min-width: 576px) {
 
   .right-sidebar{
     margin-bottom: 0;
@@ -556,9 +573,22 @@ a{
     float: left;
   }
 
+  .copyright{
+    float: right;
+    text-align: center;
+  }
+
+  .contact-info{
+    float: left;
+    text-align: center;
+  }
+
+
+
 }
 
-  @media  (min-width: 768px) {
+@media screen and (min-width: 768px) {
+  
     .search-icon{
       position: relative;
       width: 18px;
@@ -597,18 +627,19 @@ a{
       width: auto;
     }
     
+    .bottom-header-inner-right-notification{
+      display: inline-block;
+    }
+    
      
 }
 
-  @media  (min-width: 992px) {
+  @media screen and (min-width: 992px) {
 
     .top-header-inner-detail{
       display: block;
     }
 
-    .bottom-header-inner-right-notification{
-      display: inline-block;
-    }
   
     .entities-container{
       width: 55%;
@@ -645,9 +676,6 @@ a{
       display: none;
     }
 
-    .notification{
-      display: none;
-    }
 
 
 
